<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:gravity="center_vertical|end"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/res"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.2"
        tools:text="Calcul"/>

    <TextView
        android:id="@+id/res"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/grey"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.1"
        tools:text="Resultat"/>

    <Button
        android:id="@+id/ac"
        android:tag="AC"
        style="@style/grey_button"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/ac"
        app:layout_constraintTop_toBottomOf="@id/res"
        app:layout_constraintBottom_toTopOf="@id/b7"
        app:layout_constraintEnd_toStartOf="@id/pm"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/pm"
        android:tag="PM"
        style="@style/grey_button"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/pm"
        app:layout_constraintTop_toBottomOf="@id/res"
        app:layout_constraintBottom_toTopOf="@id/b8"
        app:layout_constraintEnd_toStartOf="@id/per"
        app:layout_constraintStart_toEndOf="@id/ac"/>

    <Button
        android:id="@+id/per"
        android:tag="PER"
        style="@style/grey_button"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/per"
        app:layout_constraintTop_toBottomOf="@id/res"
        app:layout_constraintBottom_toTopOf="@id/b9"
        app:layout_constraintEnd_toStartOf="@id/div"
        app:layout_constraintStart_toEndOf="@id/pm"/>

    <Button
        android:id="@+id/div"
        android:tag="DIV"
        style="@style/orange_button"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/div"
        app:layout_constraintTop_toBottomOf="@id/res"
        app:layout_constraintBottom_toTopOf="@id/mult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/per"/>


    <Button
        android:id="@+id/b7"
        android:tag="NUMBER"
        style="@style/dark_grey_button"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/_7"
        app:layout_constraintTop_toBottomOf="@id/ac"
        app:layout_constraintEnd_toStartOf="@id/b8"
        app:layout_constraintBottom_toTopOf="@id/b4"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/b8"
        android:tag="NUMBER"
        style="@style/dark_grey_button"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/_8"
        app:layout_constraintTop_toBottomOf="@id/pm"
        app:layout_constraintEnd_toStartOf="@id/b9"
        app:layout_constraintBottom_toTopOf="@id/b5"
        app:layout_constraintStart_toEndOf="@id/b7"/>

    <Button
        android:id="@+id/b9"
        android:tag="NUMBER"
        style="@style/dark_grey_button"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/_9"
        app:layout_constraintTop_toBottomOf="@id/per"
        app:layout_constraintEnd_toStartOf="@id/mult"
        app:layout_constraintBottom_toTopOf="@id/b6"
        app:layout_constraintStart_toEndOf="@id/b8"/>

    <Button
        android:id="@+id/mult"
        android:tag="MULT"
        style="@style/orange_button"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/x"
        app:layout_constraintTop_toBottomOf="@id/div"
        app:layout_constraintBottom_toTopOf="@id/min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/b9"/>


    <Button
        android:id="@+id/b4"
        android:tag="NUMBER"
        style="@style/dark_grey_button"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/_4"
        app:layout_constraintTop_toBottomOf="@id/b7"
        app:layout_constraintEnd_toStartOf="@id/b5"
        app:layout_constraintBottom_toTopOf="@id/b1"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/b5"
        android:tag="NUMBER"
        style="@style/dark_grey_button"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/_5"
        app:layout_constraintTop_toBottomOf="@id/b8"
        app:layout_constraintEnd_toStartOf="@id/b6"
        app:layout_constraintBottom_toTopOf="@id/b2"
        app:layout_constraintStart_toEndOf="@id/b4"/>

    <Button
        android:id="@+id/b6"
        android:tag="NUMBER"
        style="@style/dark_grey_button"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/_6"
        app:layout_constraintTop_toBottomOf="@id/b9"
        app:layout_constraintEnd_toStartOf="@id/min"
        app:layout_constraintBottom_toTopOf="@id/b3"
        app:layout_constraintStart_toEndOf="@id/b5"/>

    <Button
        android:id="@+id/min"
        android:tag="MINUS"
        style="@style/orange_button"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/minus"
        app:layout_constraintTop_toBottomOf="@id/mult"
        app:layout_constraintBottom_toTopOf="@id/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/b6"/>


    <Button
        android:id="@+id/b1"
        android:tag="NUMBER"
        style="@style/dark_grey_button"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/_1"
        app:layout_constraintTop_toBottomOf="@id/b4"
        app:layout_constraintEnd_toStartOf="@id/b2"
        app:layout_constraintBottom_toTopOf="@id/b0"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/b2"
        android:tag="NUMBER"
        style="@style/dark_grey_button"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/_2"
        app:layout_constraintTop_toBottomOf="@id/b5"
        app:layout_constraintEnd_toStartOf="@id/b3"
        app:layout_constraintBottom_toTopOf="@id/b0"
        app:layout_constraintStart_toEndOf="@id/b1" />

    <Button
        android:id="@+id/b3"
        android:tag="NUMBER"
        style="@style/dark_grey_button"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/_3"
        app:layout_constraintTop_toBottomOf="@id/b6"
        app:layout_constraintEnd_toStartOf="@id/plus"
        app:layout_constraintBottom_toTopOf="@id/eq"
        app:layout_constraintStart_toEndOf="@id/b2"/>

    <Button
        android:id="@+id/plus"
        android:tag="PLUS"
        style="@style/orange_button"
        android:text="@string/plus"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/min"
        app:layout_constraintBottom_toTopOf="@id/eq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/b3"/>


    <Button
        android:id="@+id/b0"
        android:tag="NUMBER"
        style="@style/dark_grey_button"
        android:layout_gravity="bottom"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/_0"
        app:layout_constraintTop_toBottomOf="@id/b1"
        app:layout_constraintEnd_toStartOf="@id/point"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.45"/>

    <Button
        android:id="@+id/point"
        android:tag="NUMBER"
        style="@style/dark_grey_button"
        android:layout_gravity="bottom"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/point"
        app:layout_constraintTop_toBottomOf="@id/b2"
        app:layout_constraintEnd_toStartOf="@id/eq"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/b0"/>

    <Button
        android:id="@+id/eq"
        android:tag="EQ"
        style="@style/orange_button"
        android:layout_gravity="bottom"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:text="@string/eq"
        app:layout_constraintTop_toBottomOf="@id/plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/point"/>


</androidx.constraintlayout.widget.ConstraintLayout>